# backend

./: .gitignore  Dockerfile  pyproject.toml
app/: create_tables_async.py  default_data.py  main.py
app/auth/: authenticate.py  hash_password.py  jwt_handler.py
app/core/: database.py
app/models/: __init__.py  mental_plan.py  outher_task.py  physical_plan.py  user.py  workout.py
app/routers/: mental_plan.py  outher_tasks.py  physical_plan.py  resourse.py  user.py
migrations/: env.py
migrations/versions/: b82013178305_update_default_value_for_field.py  ecebefdeca18_add9.py  eecfa36648bd_обновление_базы_данных_с_учетом_.py
